@@ -5,6 +5,7 @@ NEW FUNCTIONS:
 MINOR:
   * pitch_app(): choose summary function
   * analyze() and analyzeFolder() accept manually checked pitch contours as produced by pitch_app ("pitchManual" argument)
+  * segment(), segmentFolder(): added oscillogram, improved accuracy of timing
 
 
           CHANGES IN SOUNDGEN VERSION 1.5.1 [12-October-2019]
